--- a/gold-admin-frontend/src/app/views/pages/auth/forgot-password/forgot-password.component.html
+++ b/gold-admin-frontend/src/app/views/pages/auth/forgot-password/forgot-password.component.html
@@ -9,7 +9,7 @@
 		<div class="text-center forgot-sub-title text-gray">
 			Enter Your Register Mobile No.
 		</div>
-		<kt-auth-notice></kt-auth-notice>
+		<!-- <kt-auth-notice></kt-auth-notice> -->
 
 		<form class="kt-form" [formGroup]="forgotPasswordForm" autocomplete="off">
 			<div class="form-group">
