--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/loan-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/loan-application-form.component.html
@@ -52,16 +52,16 @@
                 <mat-divider></mat-divider>
             </div>
         </div>
-        <div class="row py-3" *ngIf="url != 'package-image-upload'">
+        <div class="row py-3" *ngIf="!disabledForm">
             <div class="col-12">
                 <kt-button [value]="'Apply'" [type]="'button'" (click)="apply()"></kt-button>
                 <span class="kt-padding-10"></span>
                 <kt-button [value]="'Cancel'" [type]="'reset'" (click)="cancel()"></kt-button>
             </div>
         </div>
-        <div class="row " id="packets" *ngIf="url == 'package-image-upload'">
+        <div class="row " id="packets" *ngIf="url == 'package-image-upload' || (action == 'edit' && customerDetail.loanPacketDetails.length>0)">
             <div class="col packets-height" >
-                <kt-upload-packets></kt-upload-packets>
+                <kt-upload-packets [viewpacketsDetails]="customerDetail.loanPacketDetails"></kt-upload-packets>
             </div>
         </div>
     </kt-portlet-body>
