chnages and testing

--- a/gold-admin-frontend/src/app/views/pages/lead-management/lead-management.component.html
+++ b/gold-admin-frontend/src/app/views/pages/lead-management/lead-management.component.html
@@ -73,7 +73,7 @@
                 <ng-container matColumnDef="kyc">
                     <mat-header-cell *matHeaderCellDef></mat-header-cell>
                     <mat-cell *matCellDef="let lead">
-                        <ng-container *ngIf="lead.status.id == '1'">
+                        <ng-container *ngIf="lead.status.id == '1' && !lead.customerKyc.isKycSubmitted ">
                             <div [ngStyle]="{'display': 'inherit'}">
                                     <button (click)="goToKyc(lead.mobileNumber)" class="apply-kyc">Apply KYC</button>
                             </div>
