--- a/gold-admin-frontend/src/app/views/pages/loan-management/applied-loan/applied-loan.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/applied-loan/applied-loan.component.scss
@@ -10,6 +10,7 @@
     }
     .mat-column-fullName{
         padding-left: 0 !important;
+        word-break: break-all !important;
     }
     .mat-column-actions{
         flex:0 0 8% !important;
