--- a/gold-admin-frontend/src/app/views/pages/user-management/permissions/permissions.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/permissions/permissions.component.html
@@ -12,7 +12,7 @@
                         <div class="row card-border" *ngFor="let entity of permission.entity;index as entityIndex;first as f" [class.kt-margin-t-15]="entityIndex!=f" >
                             <div class="col-12">
                                 <div class="row line-height justify-content-center">
-                                    <div class="col-2">
+                                    <div class="col-2 p-0">
                                         <label class="text-color font-weight-bold">{{entity.entityName | titlecase}}</label>
                                     </div>
                                     <div class="col-1">
