--- a/gold-admin-frontend/src/app/views/pages/user-management/permissions/permissions.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/user-management/permissions/permissions.component.scss
@@ -2,7 +2,7 @@
     .card-border {
         border       : 1px solid #c5c6c6;
         border-radius: 15px;
-        height: 100px;
+        min-height: 100px;
     }
     .line-height{
         line-height:7.5;
