bhushan: applied loan changes

--- a/gold-admin-frontend/src/app/views/pages/loan-management/applied-loan/applied-loan.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/applied-loan/applied-loan.component.scss
@@ -1,4 +1,7 @@
 :host{
+    // ::ng-deep.mat-row, ::ng-deep.mat-header-row  {
+    //     width: 110% !important;
+    // }
     .mat-column-pan{
         flex: 0 0 9% !important;
     }
@@ -10,24 +13,59 @@
     }
     .mat-column-fullName{
         padding-left: 0 !important;
+        flex: 0 0 11% !important;
+        word-break: break-all;
+    }
+    .mat-column-loanAmount{
+        flex: 0 0 10% !important;
+    }
+    .mat-column-schemeName{
+        flex: 0 0 11% !important;
     }
     .mat-column-actions{
-        flex:0 0 8% !important;
+        flex:0 0 14% !important;
     }
     .mat-column-customerID{
         flex: 0 0 9% !important;
     }
     .mat-column-appraisalApproval{ 
-        flex-basis: 4% !important;
+        flex: 0 0 13% !important;        
     }
     .mat-column-bMApproval{ 
-        flex-basis: 3% !important;
+        flex: 0 0 11% !important;        
     }
-    
+    .mat-column-view{ 
+        flex: 0 0 11% !important;        
+    }
+    button {
+        width: 120px;
+    }
     .apply-kyc {
 		background: transparent;
 		border: thin solid #454D67;
 		border-radius: 5px;
 		padding: 5px;
+    }
+    
+    .primary-button {
+		background: transparent;
+		border: thin solid #6580f5;
+		border-radius: 5px;
+        padding: 5px;
+        color: #6580f5 !important;
+    }
+    .red-button {
+		background: transparent;
+		border: thin solid #ff7272;
+		border-radius: 5px;
+        padding: 5px;
+        color: #ff7272 !important;
+    }
+    .green-button {
+		background: transparent;
+		border: thin solid #8ddb5d;
+		border-radius: 5px;
+        padding: 5px;
+        color: #8ddb5d !important;
 	}
 }
