--- a/gold-admin-frontend/src/app/views/pages/customer-management/loan-details/loan-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/customer-management/loan-details/loan-details.component.html
@@ -46,7 +46,10 @@
 
                 <div class="col">
                     <div class="text-gray font-weight-500 kt-padding-b-5">Customer Name</div>
-                    <div class=" text-color font-weight-500 kt-padding-b-5">Atul Oroskar</div>
+                    <div class=" text-color font-weight-500 kt-padding-b-5">
+                        {{loanDetails.customer.firstName | titlecase}}
+                        {{loanDetails.customer.lastName | titlecase}}
+                    </div>
                 </div>
                 <div class="col-2">
                     <div class="text-gray font-weight-500 kt-padding-b-5">Account Number</div>
