--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
@@ -155,11 +155,11 @@
             </div>
         </div>
 
-        <!-- <div class="row kt-margin-b-20">
+        <div class="row kt-margin-b-20">
             <div class="col-6">
                 <div class="row">
                     <div class="col-4 form-label">
-                        <label>Processing Charges(fixed)</label>
+                        <label class="mandatory">Processing Charges(fixed)</label>
                     </div>
                     <div class="col-7">
                         <input type="number" class="form-control" formControlName="processingChargeFixed"
@@ -169,13 +169,17 @@
                             *ngIf="controls.processingChargeFixed.errors?.pattern && controls.processingChargeFixed.touched">
                             Invalid Input
                         </mat-error>
+                        <mat-error
+                            *ngIf="controls.processingChargeFixed.errors?.required && controls.processingChargeFixed.touched">
+                            Required field
+                        </mat-error>
                     </div>
                 </div>
             </div>
             <div class="col-6">
                 <div class="row">
                     <div class="col-4 form-label">
-                        <label>Processing Charges(%)</label>
+                        <label class="mandatory">Processing Charges(%)</label>
                     </div>
                     <div class="col-7">
                         <input type="number" class="form-control" formControlName="processingChargePercent"
@@ -185,10 +189,14 @@
                             *ngIf="controls.processingChargePercent.errors?.pattern && controls.processingChargePercent.touched">
                             Invalid Input
                         </mat-error>
+                        <mat-error
+                            *ngIf="controls.processingChargePercent.errors?.required && controls.processingChargePercent.touched">
+                            Required field
+                        </mat-error>
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
         <div class="row" *ngIf="!disable">
             <div class="col-6 kt-margin-t-30 kt-margin-b-30">
 
@@ -202,10 +210,10 @@
         <div class="col-6">
             <div class="row justify-content-center">
                 <div class="col-7">
-                    <!-- <div>
+                    <div>
                         <label for="" class="text-color font-weight-500">Processing Charges :-
                             {{controls.processingCharge.value}}</label>
-                    </div> -->
+                    </div>
                     <div class="table-div" id="print">
                         <table class="table table-bordered">
                             <thead>
